# chess-agent

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: file-store.test.ts  file-store.ts  import-lichess-token.ts  index.test.ts  index.ts  main.ts  oauth.test.ts  oauth.ts  server.test.ts  server.ts
apps/cli/: package.json
apps/cli/src/: index.test.ts  index.ts  main.ts
apps/desktop/: package.json
apps/desktop/src/: index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.test.ts  index.ts  main.tsx  styles.css
docs/: architecture.md  data-model.md  mvp.md  security.md
evaluations/: README.md  agent-behavior.test.ts  package.json  tsconfig.json
infrastructure/: .env.example  Dockerfile.api  Dockerfile.web  README.md  compose.yaml  nginx.conf
prompts/: system.md
prompts/skills/: game-control.md  game-review.md  puzzle-session.md
services/engine/: package.json
services/engine/src/: index.test.ts  index.ts  stockfish.integration.test.ts
services/puzzle/: package.json  tsconfig.json
services/puzzle/src/: index.test.ts  index.ts
services/review/: package.json  tsconfig.json
services/review/src/: index.test.ts  index.ts
