[package]
name = "chess-agent-desktop"
version = "0.1.0"
description = "Desktop shell for Chess Agent"
authors = ["Chess Agent contributors"]
edition = "2021"

[lib]
name = "chess_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

